[project]
dependencies = [
  "beautifulsoup4==4.13.4",
  "fire==0.7.0",
  "requests==2.32.4"
]
name = "parcel-tracker"
version = "0.0.0"

[project.optional-dependencies]
dev = [
  "coverage==7.10.1",
  "djlint==1.36.4",
  "mypy==1.17.1",
  "ruff==0.12.7",
  "ssort==0.15.0",
  "toml-sort==0.24.2"
]

[project.scripts]
parcel-tracker = "main:main"

[tool.setuptools]
py-modules = ["main"]
