[project]
dependencies = [
  "beautifulsoup4==4.14.2",
  "fire==0.7.1",
  "requests==2.32.5"
]
name = "parcel-tracker"
version = "0.0.0"

[project.optional-dependencies]
dev = [
  "coverage==7.10.7",
  "djlint==1.36.4",
  "mypy==1.18.2",
  "ruff==0.13.2",
  "ssort==0.15.0",
  "toml-sort==0.24.3"
]

[project.scripts]
parcel-tracker = "main:main"

[tool.setuptools]
py-modules = ["main"]
